[package]
name = "period"
version = "0.6.0"
edition = "2024"
description = "A human-friendly date and time library for Rust"
license = "MIT"
keywords = ["date", "time", "datetime", "chrono", "relative"]
categories = ["date-and-time"]
readme = "README.md"
repository = "https://github.com/vasanth/period"
rust-version = "1.93"

[dependencies]
chrono = "0.4"

[lints.rust]
unused = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# allow these pedantic lints that are too noisy for this crate
module_name_repetitions = "allow"
